--- a/Android-java/SoundRecorder/res/values/strings.xml
+++ b/Android-java/SoundRecorder/res/values/strings.xml
@@ -45,8 +45,9 @@
     <string name="discard">Discard</string>
     <!-- acknowlegement button in a number of dialogs -->
     <string name="button_ok">OK</string>
+    <string name="initTime">00:00:00</string>
     <!-- Do not translate. Format of the timer that shows how much has been recorded so far -->
-    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
+    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d:%02d</xliff:g></string>
    
     <!-- the name under which recordings will be visible in the media database is formatted like this --> 
     <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
