解决解密后的WAV最后一小版为噪音的问题,原因为最后收到的现次数据小后buffersize,加密位置错乱

--- a/Android-java/SoundRecorder/res/values/strings.xml
+++ b/Android-java/SoundRecorder/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="error_app_internal">Internal application error.</string>
     <!-- shown as the message in a dialog when the recording could not be added to the media database -->
     <string name="error_mediadb_new_record">Couldn\'t save recorded audio.</string>
+    <string name="testpasswd"></string>
 </resources>
